libs/bng/test/negative/N0231_rxn_component_used_only_on_one_side_no_state_imbalance.bngl
# FAIL
# OUTPUT: error: Did not find a matching molecule in products for reactant molecule A(a,p) listed as complex 1 and molecule 0. (in the forward direction, indices are counted from 0)
# OUTPUT: error: Did not find a matching molecule in products for reactant molecule A(a!1) listed as complex 0 and molecule 1. (in the reverse direction, indices are counted from 0)

# NOTE: BNG2.pl reports Molecule created in reaction rule: Component(s) p missing from molecule A(a!1)

begin parameters
   kp 0.00001
   km 1
end parameters

begin molecule types
   A(a,p~0~1)
end molecule types

begin reaction rules
  A(a,p) + A(a,p) <-> A(a!1,p).A(a!1) kp, km
end reaction rules
